--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>John Carmichael's Portfolio</title>
+  <title>Ujwala Pawnarkar's Portfolio</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./styles/main.css" />
   <script src="https://use.fontawesome.com/releases/v5.9.0/js/all.js" data-auto-a11y="true"></script>
@@ -10,78 +10,108 @@
 
 <body>
   <header>
-    <div class="name">John Carmichael</div>
+    <div class="name">Ujwala Pawnarkar</div>
     <div class="links">
       <div class="link">
-        <a href="https://www.linkedin.com/in/jlcarmic/" target="_blank">LinkedIn</a>
+        <a href="https://www.linkedin.com/in/ujwalapawnarkar/" target="_blank">LinkedIn</a>
       </div>
       <div class="link">
-        <a href="https://github.com/jlcarmic" target="_blank">GitHub</a>
+        <a href="https://github.com/sonukhot" target="_blank">GitHub</a>
       </div>
       <div class="link">
-        <a href="https://codepen.io/jlcarmic/" target="_blank">CodePen</a>
+        <a href="https://codepen.io/sonukhot" target="_blank">CodePen</a>
       </div>
       <div class="link">
-        <a href="./resume.pdf" target="_blank">Resume</a>
+        <a href="./Resume1.pdf" target="_blank">Resume</a>
       </div>
     </div>
   </header>
   <div class="content">
     <div class="section about">
       <div class="photo"></div>
+
       <div class="description">
         <p>
-          I am a product developer with over a decade of experience building best-of-class solutions.
-          With expertise in product development, software engineering, cyber security, and technical operations,
-          I have helped startups create products to delight their customers.
+          I am a Web Developer product with background in Architecture, Real Estate and teaching.
+          With expertise in project development, App development, database creation.
+
         </p>
         <p>
-          I have held positions as a Software Engineer, Security Engineer, Director of Operations, and Vice President
-          of Product & Engineering.
+          I have held positions as a Web Developer, Architect, RealEstate Agent, Substitute Teacher and
+          Interior Designer.
         </p>
       </div>
     </div>
     <div class="divider">Projects</div>
     <div class="section projects">
-      <div class="project">
-        <div class="explanation">
-          <p>Animated floating Hal Jordan, the Green Lantern.</p>
-          <p>Image is an SVG created in Sketch.</p>
-          <p>Animation is achieved with CSS.</p>
-          <a href="https://github.com/jlcarmic/green-lantern" target="_blank">
-            <button class="button">Green Lantern</button>
-          </a>
-        </div>
-        <div class="screenshot">
-          <img src="images/greenlantern.png" />
-        </div>
-      </div>
 
       <div class="project">
         <div class="screenshot">
-          <img src="./images/producthuntalexa.png" />
+          <img src="./images/movies.jpg" width="500" height="350" />
         </div>
         <div class="explanation">
-          <p>An Alexa Skill for hearing Today's Featured products.</p>
-          <p>Built using NodeJS and AWS Lambda.</p>
-          <p>Utilizes ProductHunt's API.</p>
+          <p>Created movies Database backed with Express API.</p>
+          <p>Built using NodeJS and MySql.</p>
+          <p>Using Postman for testing.</p>
           </p>
-          <a href="https://github.com/jlcarmic/producthunt_alexa_skill" target="_blank">
-            <button class="button">Today's Featured</button>
+          <a href="https://github.com/sonukhot/movie-api" target="_blank">
+            <button class="button">Today's Weather</button>
+          </a>
+        </div>
+      </div>
+      <div class="project">
+        <div class="explanation">
+          <p>An Alexa Skill to get information of a movie plot.</p>
+          <p>Built using NodeJS and AWS Lambda.</p>
+          <p>Utilizes imdb API.</p>
+          <a href="https://github.com/sonukhot/alexa-movieplot" target="_blank">
+            <button class="button">Movie Plot</button>
+          </a>
+        </div>
+        <div class="screenshot">
+          <img src="images/movie.jpg" />
+        </div>
+      </div>
+
+      <div class="project">
+        <div class="screenshot">
+          <img src="./images/weather.jpg" width="500" height="350" />
+        </div>
+        <div class="explanation">
+          <p>An Alexa Skill to know Today's Weather conditions.</p>
+          <p>Built using NodeJS and AWS Lambda.</p>
+          <p>Utilizes Open Weather API.</p>
+          </p>
+          <a href="https://github.com/sonukhot/todays-weather" target="_blank">
+            <button class="button">Today's Weather</button>
           </a>
         </div>
       </div>
 
       <div class="project">
         <div class="explanation">
-          <p>An NPM package for accessing sports<br />stats via the Stattleship API.</p>
-          <p>Built in NodeJS and published to NPM<br />as an open source package.</p>
-          <a href="https://github.com/jlcarmic/node-stattleship" target="_blank">
-            <button class="button">Node Stattleship</button>
+          <p>Member of Ashland Community Garden.</p>
+          <p>Involved in mentoring new gardeners and organize workshops for kids and adults.</p>
+          <a href="https://www.facebook.com/acgstonepark/" target="_blank">
+            <button class="button">Volunteer</button>
           </a>
         </div>
         <div class="screenshot">
-          <img class="stattleship" src="./images/stattleship.svg" />
+          <img class="stattleship" src="./images/volunteer.jpg" width="300" height="250" />
+        </div>
+      </div>
+      <div class="project">
+        <div class="screenshot">
+          <img src="./images/2ND FLOOR.jpg" width="400" height="400" />
+        </div>
+        <div class="explanation">
+          <p>A Interior Space planning and designing project.</p>
+          <p>Designed from conceptual planning, design, and execution to completion.</p>
+          <p>Coordinated with different local and remote consultants and vendors .</p>
+          </p>
+          <a>
+            <button class="button">TCS Development Center, Madhapur</button>
+          </a>
         </div>
       </div>
     </div>
